src/styles/defi_details.css
/* ... */
.menu_category {
    min-width: 350px;
}

form {
    margin-bottom: 0;
}

.underline {
    width: 36px;
}

.defi_category {
    display: flex;
    position: relative;
    flex-direction: column;
    margin: auto;
    margin-top: 100px;
    align-items: flex-start;
    width: 100%;
    overflow: hidden;
    justify-content: start;
}

.defi_category>h1 {
    margin-bottom: 20px;
}

.defi_constraints {
    margin-right: 150px;
}

.defi_information>p>span {
    font-weight: bold;
    margin-right: 15px;
}
#time {
    font-weight: 500;
}

.menu_profile {
    min-width: 200px;
}

.classement_content {
    width: 100%;
    align-self: flex-start;
    display: flex;
    flex-direction: column;
}

.gold_container .video_container{
    margin-right: 0;
}

.defi_container {
    justify-content: space-around;
    flex-direction: row;
    display: flex;
    width: 90%;
    margin: auto;
}

.defi_container>* {
    min-width: 351px;
}

.defi_information {
    display: flex;
    flex-direction: column;
}

.depot_btn {
    text-decoration: none;
    padding: 10px;
    align-self: center;
    margin-bottom: 20px;
    width: 300px;
    line-height: unset;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.depot_icon {
    height: 20px;
}

.depot_btn:hover,
.btn_send:hover,
.file_video:hover,
.file_poster:hover {
    background-color: #af002c;
    transition: 0.1s ease;
    overflow: hidden;
}

.second_category,
.third_category {
    margin-top: 80px;
}

.third_category {
    height: auto;
    justify-content: center;
    margin-bottom: 50px;
}

.classement_container {
    position: relative;
    display: flex;
    justify-content: space-between;
    padding-top: 40px;
    height: 500px;
    align-self: flex-start;
}

.classement_content>.video_container {
    margin-right: 0;
    margin-top: 100px;
    /* float: right; */
}

.description_container {
    width: 640px;
}

.gold_container {
    width: 40%;
    float: right;
    position: relative;
    display: flex;
    margin-top: 80px;
    margin-bottom: 20px;
    align-self: center;
    min-height: 350px;
}

.upload_container {
    z-index: 300;
    width: 900px;
    display: none;
}

.defi_title {
    font-size: 1.5rem;
    font-weight: bold;
    text-align: center;
    color: #D60036;
}

.upload_content {
    display: flex;
    justify-content: space-between;
}

.input_container {
    margin-bottom: 20px;
    align-items: center;
    text-align: center;
}

.input_connexion {
    width: 300px;
    border-bottom: 1px solid var(--text);
}

.input_synopsis {
    min-height: 100px;
    max-width: 300px;
    width: 300px;
}

.input_container label {
    height: auto;
}

.input_container label>span {
    color: var(--text);
}

.upload_video {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.preview_video {
    height: 240px;
    width: 426px;
    background-color: black;
    margin-bottom: 40px;
}

.btn_send,
.file_video_btn,
.file_poster_btn {
    width: 200px;
}

.btn_send {
    margin-top: 40px;
}

.file_video,
.file_poster {
    margin-bottom: 20px;
    display: inline-block;
    position: relative;
    overflow: hidden;
    line-height: unset;
    height: 35px;
    background-color: #D60036;
    border-radius: 5px;
    width: unset;
}

.file_video input[type=file],
.file_poster input[type=file] {
    left: 0;
    right: 0;
    top: 0;
    opacity: 0;
    position: absolute;
    font-size: 90px;
    cursor: pointer;
}

.file_video_btn,
.file_poster_btn {
    margin-top: 0;
    margin-bottom: 20px;
    width: 250px;
    line-height: unset;
    background-color: transparent;
}

.upload_footer {
    padding: 50px;
    padding-top: 0;
    display: flex;
    align-items: center;
    flex-direction: column;
}

.position_title {
    display: none;
}

.nav_footer_category .defi_icon {
    margin-right: 0;
}

.modify_film_container .input_synopsis{
    max-width : unset;
}

@media screen and (max-width:1130px) {

    .category_title,
    .underline {
        display: none;
    }

    .category_list {
        display: flex;
    }

    .menu_category {
        min-width: 120px;
    }

    .menu_nav {
        padding-left: 10%;
    }

    .category_list_container {
        display: flex;
        left: 10%;
    }
}

@media screen and (max-width:950px) {
    .preview_video {
        width: 304px;
        height: 171px;
    }

    .upload_container {
        width: 750px;
    }

    .defi_container {
        flex-direction: column;
    }

    .defi_information {
        margin-top: 30px;
        flex-direction: column-reverse;
    }

    .depot_btn {
        margin: 0;
        margin-top: 30px;
    }

    .defi_constraints {
        margin-right: 0px;
    }
}

@media screen and (max-width:800px) {

    /* .main_content{
        background: url(/sources/img/dark_background.svg) 1400px -620px /1800px;
    } */
    .upload_container {
        width: 550px;
    }

    .upload_header>p {
        font-size: 1.9rem;
    }

    .upload_content {
        flex-direction: column;
    }

    .input_synopsis {
        margin: auto;
        margin-bottom: 10px;
    }

    .upload_input {
        order: 2;
        margin-top: 40px;
    }

    .preview_video {
        height: 240px;
        width: 426px;
        background-color: black;
        margin-bottom: 40px;
    }
}
/* ... */

